force-app/main/default/objects/LMS_Training__c/LMS_Training__c.object-meta.xml
<CustomObject>
    <label>LMS Training</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>LMS Training Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LMS Trainings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>