force-app/main/default/objects/LMS_Training__c/fields/LMS_Category__c.field-meta.xml
<CustomField>
    <fullName>LMS_Category__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>