force-app/main/default/objects/LMS_Training__c/fields/LMS_Description__c.field-meta.xml
<CustomField>
    <fullName>LMS_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>