force-app/main/default/objects/LMS_Training__c/fields/LMS_Has_Quiz__c.field-meta.xml
<CustomField>
    <fullName>LMS_Has_Quiz__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Quiz</label>
    <type>Checkbox</type>
</CustomField>