force-app/main/default/objects/LMS_Training__c/fields/LMS_Internal_Content__c.field-meta.xml
<CustomField>
    <fullName>LMS_Internal_Content__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Internal Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>