force-app/main/default/objects/LMS_Training__c/fields/LMS_Required_Review_Steps__c.field-meta.xml
<CustomField>
    <fullName>LMS_Required_Review_Steps__c</fullName>
    <label>Required Review Steps</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>