force-app/main/default/objects/LMS_Training__c/fields/LMS_Requires_Acknowledgment__c.field-meta.xml
<CustomField>
    <fullName>LMS_Requires_Acknowledgment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Acknowledgment</label>
    <type>Checkbox</type>
</CustomField>